--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -58,36 +58,52 @@
 <script src="/admin/js/bug_admin_detail.js"></script>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
+fetch('/admin/api/list_bug_reports.php')
+  .then(r => {
+    if (!r.ok) throw new Error();
+    return r.json();
+  })
+  .then(data => {
+    if (!data.ok) return;
 
-  fetch('/admin/partials/admin_header.html')
-    .then(r => r.text())
-    .then(html => {
-      const container = document.getElementById('adminHeader');
-      if (!container) return;
+    const tbody = document.querySelector('#ticketsTable tbody');
 
-      container.innerHTML = html;
+    data.tickets.forEach(t => {
+      const tr = document.createElement('tr');
+      tr.style.cursor = 'pointer';
 
-      // 🔹 zvýraznění aktuální stránky
-      const links = container.querySelectorAll('.auth a');
+      const statusClass = 'status-' + t.status;
 
-      links.forEach(link => {
-        const linkPath = new URL(link.href).pathname;
-        const currentPath = window.location.pathname;
+      tr.innerHTML = `
+  <td>${t.id}</td>
+  <td>${t.email}</td>
+  <td>${t.game_account ? t.game_account : '-'}</td>
+  <td>${t.category}</td>
+  <td>${t.title}</td>
+  <td>
+    <span class="status-badge ${statusClass}">
+      ${t.status.replace('_', ' ').toUpperCase()}
+    </span>
+  </td>
+  <td>${t.created_at}</td>
+`;
 
-        if (linkPath === currentPath) {
-          link.classList.remove('btn');
-          link.classList.add('btn-primary');
-        }
-      });
-
-    })
-    .catch(err => {
-      console.error('Admin header load error:', err);
-    });
-
+      tr.addEventListener('click', () => {
+  window.location.href = `/admin/bug_detail.html?id=${t.id}`;
 });
+
+      tbody.appendChild(tr);
+    });
+  });
 </script>
+<script>
+fetch('/admin/partials/admin_header.html')
+  .then(r => r.text())
+  .then(html => {
+    document.getElementById('adminHeader').innerHTML = html;
+  });
+</script>
+
 
 
 
