--- a/admin/economy.html
+++ b/admin/economy.html
@@ -7,19 +7,7 @@
 </head>
 <body class="admin-page">
 
-<header class="main-header">
-    <div class="logo">
-        <a href="/admin/index.html">ORDO DRACONIS – ADMIN</a>
-    </div>
-    <div class="auth">
-        <a href="/admin/index.html" class="btn">Dashboard</a>
-        <a href="/admin/users.html" class="btn">Uživatelé</a>
-        <a href="/admin/vip.html" class="btn">VIP</a>
-        <a href="/admin/economy.html" class="btn btn-secondary">Economy</a>
-        <a href="/admin/bug_reports.html" class="btn">Bug reports</a>
-        <a href="/api/logout.php" class="btn">Odhlásit</a>
-    </div>
-</header>
+<div id="adminHeader"></div>
 
 <main class="auth-container">
 
@@ -69,6 +57,52 @@
 </main>
 
 <script src="/admin/js/economy.js"></script>
+<script>
+fetch('/admin/api/list_bug_reports.php')
+  .then(r => {
+    if (!r.ok) throw new Error();
+    return r.json();
+  })
+  .then(data => {
+    if (!data.ok) return;
+
+    const tbody = document.querySelector('#ticketsTable tbody');
+
+    data.tickets.forEach(t => {
+      const tr = document.createElement('tr');
+      tr.style.cursor = 'pointer';
+
+      const statusClass = 'status-' + t.status;
+
+      tr.innerHTML = `
+  <td>${t.id}</td>
+  <td>${t.email}</td>
+  <td>${t.game_account ? t.game_account : '-'}</td>
+  <td>${t.category}</td>
+  <td>${t.title}</td>
+  <td>
+    <span class="status-badge ${statusClass}">
+      ${t.status.replace('_', ' ').toUpperCase()}
+    </span>
+  </td>
+  <td>${t.created_at}</td>
+`;
+
+      tr.addEventListener('click', () => {
+  window.location.href = `/admin/bug_detail.html?id=${t.id}`;
+});
+
+      tbody.appendChild(tr);
+    });
+  });
+</script>
+<script>
+fetch('/admin/partials/admin_header.html')
+  .then(r => r.text())
+  .then(html => {
+    document.getElementById('adminHeader').innerHTML = html;
+  });
+</script>
 
 </body>
 
