--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,28 @@
 
 <body class="admin-page">
 
-<div id="adminHeader"></div>
+<header class="main-header">
+  <div class="logo">
+    <a href="/admin/index.html">ORDO DRACONIS – ADMIN</a>
+  </div>
+
+  <div class="auth">
+
+    <!-- ADMIN SEKCE -->
+    <a href="/admin/index.html" class="btn">Dashboard</a>
+    <a href="/admin/users.html" class="btn">Uživatelé</a>
+    <a href="/admin/vip.html" class="btn">VIP</a>
+    <a href="/admin/economy.html" class="btn">Economy</a>
+    <a href="/admin/bug_reports.html" class="btn">Bug reports</a>
+
+    <span class="divider"></span>
+
+    <!-- USER SEKCE -->
+    <a href="/profile/index.html" class="btn btn-secondary">Profil</a>
+    <a href="/api/logout.php" class="btn">Odhlásit</a>
+
+  </div>
+</header>
 
 <main class="auth-container">
 
