--- a/admin/users.html
+++ b/admin/users.html
@@ -18,18 +18,10 @@
     <section class="admin-card">
         <h2>Web účty</h2>
 
-        <table class="admin-table">
-            <thead>
-                <tr>
-                    <th>Email / Login</th>
-                    <th>Role</th>
-                    <th>Akce</th>
-                </tr>
-            </thead>
-            <tbody id="webUsersBody">
-                <!-- plní users_admin.js -->
-            </tbody>
-        </table>
+        <div id="webUsersTree" class="admin-tree">
+    <!-- plní users_admin.js -->
+</div>
+
     </section>
 
 </main>
