--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -55,7 +55,7 @@
 
 </main>
 
-<script src="/admin/js/bug_admin_detail.js"></script>
+<script src="/admin/bug_admin_detail.js"></script>
 
 <script>
 fetch('/admin/partials/admin_header.html')
