--- a/admin/online_players.html
+++ b/admin/online_players.html
@@ -2,82 +2,39 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Admin – Online players</title>
-    
-    <link rel="stylesheet" href="/css/admin.css">
-
-  <style>
-    .online-badge {
-      color: #3ddc97;
-      font-weight: bold;
-    }
-    .admin-table td {
-      text-align: center;
-    }
-    /* ===== GM ZVÝRAZNĚNÍ ===== */
-.gm-row {
-  background: rgba(61, 220, 151, 0.08);
-}
-/* POVOLÍ KLIK NA HLAVIČKY TABULKY */
-.admin-table thead th {
-  pointer-events: auto;
-  position: relative;
-  z-index: 5;
-}
-
-/* TABULKA MUSÍ BÝT NAD POZADÍM */
-.admin-table {
-  position: relative;
-  z-index: 5;
-}
-.admin-table thead th {
-  cursor: pointer;
-}
-
-.admin-table thead th:hover {
-  color: #3ddc97;
-  text-shadow: 0 0 6px rgba(61,220,151,.4);
-}
-
-.gm-badge {
-  display: inline-block;
-  margin-left: 6px;
-  padding: 2px 8px;
-  font-size: 11px;
-  font-weight: bold;
-  border-radius: 6px;
-  background: #3ddc97;
-  color: #0f5132;
-  vertical-align: middle;
-}
-
-  </style>
+  <title>Admin – Online hráči</title>
+  <link rel="stylesheet" href="/css/admin.css">
 </head>
 
-<body class="auth-page profile-page">
+<body class="admin-page">
 
 <div id="adminHeader"></div>
 
-<main class="auth-container profile-shell">
-  <h1>Online hráči</h1>
-<a href="/admin/index.html" class="btn btn-secondary" style="margin-bottom:20px;">
-    ← Zpět na základní stránku
-  </a>
-  <p class="muted">
-    Aktuálně online: <span id="onlineCount" class="online-badge">0</span>
-  </p>
-    
-  <table class="admin-table" id="onlineTable">
-    <thead>
-  <tr>
-    <th data-key="char_name" data-type="text">POSTAVA</th>
-    <th data-key="level" data-type="number">LEVEL</th>
-    <th data-key="account_name" data-type="text">ÚČET</th>
-    <th data-key="onlineTime" data-type="number">ODEHRÁNO</th>
-  </tr>
-</thead>
-    <tbody></tbody>
-  </table>
+<main class="auth-container">
+
+  <section class="admin-card">
+
+    <h2>Online hráči</h2>
+
+    <div style="margin-bottom:15px;">
+      Aktuálně online:
+      <strong id="onlineCount" class="online-badge">0</strong>
+    </div>
+
+    <table class="admin-table" id="onlineTable">
+      <thead>
+        <tr>
+          <th data-key="char_name" data-type="text">POSTAVA</th>
+          <th data-key="level" data-type="number">LEVEL</th>
+          <th data-key="account_name" data-type="text">ÚČET</th>
+          <th data-key="onlineTime" data-type="number">ODEHRÁNO</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+  </section>
+
 </main>
 
 <script>
@@ -86,15 +43,20 @@ let currentSort = { key: null, dir: 1 };
 
 /* ===== LOAD DATA ===== */
 async function loadOnlinePlayers() {
-  const res = await fetch('/admin/api/list_online_players.php');
-  const data = await res.json();
+  try {
+    const res = await fetch('/admin/api/list_online_players.php');
+    const data = await res.json();
 
-  if (!data.ok) return;
+    if (!data.ok) return;
 
-  allPlayers = data.players;
+    allPlayers = data.players;
 
-  document.getElementById('onlineCount').textContent = allPlayers.length;
-  renderTable(allPlayers);
+    document.getElementById('onlineCount').textContent = allPlayers.length;
+    renderTable(allPlayers);
+
+  } catch (e) {
+    console.error("Chyba při načítání online hráčů:", e);
+  }
 }
 
 /* ===== RENDER TABLE ===== */
@@ -103,14 +65,17 @@ function renderTable(players) {
   tbody.innerHTML = '';
 
   players.forEach(p => {
+
     const tr = document.createElement('tr');
 
-    if (p.is_gm == 1) tr.classList.add('gm-row');
+    if (p.is_gm == 1) {
+      tr.style.background = "rgba(61,220,151,0.08)";
+    }
 
     tr.innerHTML = `
       <td>
         ${p.char_name}
-        ${p.is_gm == 1 ? '<span class="gm-badge">GM</span>' : ''}
+        ${p.is_gm == 1 ? '<span style="margin-left:6px;padding:2px 8px;font-size:11px;font-weight:bold;border-radius:6px;background:#3ddc97;color:#0f5132;">GM</span>' : ''}
       </td>
       <td>${p.level}</td>
       <td>${p.account_name}</td>
@@ -123,6 +88,7 @@ function renderTable(players) {
 
 /* ===== SORTING ===== */
 function sortBy(key, type) {
+
   let dir = 1;
 
   if (currentSort.key === key) {
@@ -132,6 +98,7 @@ function sortBy(key, type) {
   currentSort = { key, dir };
 
   const sorted = [...allPlayers].sort((a, b) => {
+
     let v1 = a[key];
     let v2 = b[key];
 
@@ -147,8 +114,11 @@ function sortBy(key, type) {
 
 /* ===== TIME FORMAT ===== */
 function formatTime(sec) {
+  if (!sec) return "0h 0m";
+
   const h = Math.floor(sec / 3600);
   const m = Math.floor((sec % 3600) / 60);
+
   return `${h}h ${m}m`;
 }
 
@@ -170,52 +140,12 @@ setInterval(loadOnlinePlayers, 30000);
 </script>
 
 <script>
-fetch('/admin/api/list_bug_reports.php')
-  .then(r => {
-    if (!r.ok) throw new Error();
-    return r.json();
-  })
-  .then(data => {
-    if (!data.ok) return;
-
-    const tbody = document.querySelector('#ticketsTable tbody');
-
-    data.tickets.forEach(t => {
-      const tr = document.createElement('tr');
-      tr.style.cursor = 'pointer';
-
-      const statusClass = 'status-' + t.status;
-
-      tr.innerHTML = `
-  <td>${t.id}</td>
-  <td>${t.email}</td>
-  <td>${t.game_account ? t.game_account : '-'}</td>
-  <td>${t.category}</td>
-  <td>${t.title}</td>
-  <td>
-    <span class="status-badge ${statusClass}">
-      ${t.status.replace('_', ' ').toUpperCase()}
-    </span>
-  </td>
-  <td>${t.created_at}</td>
-`;
-
-      tr.addEventListener('click', () => {
-  window.location.href = `/admin/bug_detail.html?id=${t.id}`;
-});
-
-      tbody.appendChild(tr);
-    });
-  });
-</script>
-<script>
 fetch('/admin/partials/admin_header.html')
   .then(r => r.text())
   .then(html => {
     document.getElementById('adminHeader').innerHTML = html;
   });
 </script>
-
 
 </body>
 </html>
