--- a/admin/index.html
+++ b/admin/index.html
@@ -22,6 +22,7 @@
     <a href="/admin/vip.html" class="btn">VIP</a>
     <a href="/admin/economy.html" class="btn">Economy</a>
     <a href="/admin/bug_reports.html" class="btn">Bug reports</a>
+    <a href="/admin/online_players.html">Online hráči</a>
 
     <span class="divider"></span>
 
