--- a/admin/users.html
+++ b/admin/users.html
@@ -34,13 +34,15 @@ fetch('/admin/partials/admin_header.html')
 
     // 🔥 zvýraznění aktivní stránky
     const links = document.querySelectorAll('.admin-nav a');
-    const currentPath = window.location.pathname;
+const currentFile = window.location.pathname.split("/").pop();
 
-    links.forEach(link => {
-      if (currentPath.includes(link.getAttribute('href'))) {
-        link.classList.add('active');
-      }
-    });
+links.forEach(link => {
+  const linkFile = link.getAttribute('href').split("/").pop();
+
+  if (currentFile === linkFile) {
+    link.classList.add('active');
+  }
+});
   });
 </script>
 
